objects/AdditionalAccountFields__c.object
<CustomObject>
    <fields>
        <fullName>OnboardingStatus__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Status of MSF Data Onboarding process if data is being given or if in progress (dependent on value in &quot;Onboarding Status&quot;)</inlineHelpText>
        <label>Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OnboardingStage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Access Revoked</fullName>
                </value>
                <value>
                    <fullName>Client onboarded</fullName>
                </value>
                <value>
                    <fullName>Client Project</fullName>
                </value>
                <value>
                    <fullName>Contract Negotiations</fullName>
                </value>
                <value>
                    <fullName>Data Spec Sent</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Final escalation</fullName>
                </value>
                <value>
                    <fullName>Give to get Waived</fullName>
                </value>
                <value>
                    <fullName>Inactive Trading</fullName>
                </value>
                <value>
                    <fullName>Issue Resolution</fullName>
                </value>
                <value>
                    <fullName>Legal letter being sent</fullName>
                </value>
                <value>
                    <fullName>Long Only</fullName>
                </value>
                <value>
                    <fullName>MSF Contract Cancelled</fullName>
                </value>
                <value>
                    <fullName>No SAF/SAR</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Pending escalation</fullName>
                </value>
                <value>
                    <fullName>Refer to Account manager</fullName>
                </value>
                <value>
                    <fullName>Regulator</fullName>
                </value>
                <value>
                    <fullName>Risk Client</fullName>
                </value>
                <value>
                    <fullName>Testing files</fullName>
                </value>
                <value>
                    <fullName>UKIX Only</fullName>
                </value>
                <value>
                    <fullName>Waiting for client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderManagementSystemOMS__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <label>Order Management System (OMS)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blackrock Aladdin</fullName>
                </value>
                <value>
                    <fullName>Bloomberg AIM</fullName>
                </value>
                <value>
                    <fullName>Charles River Development</fullName>
                </value>
                <value>
                    <fullName>ClearStructure Sentry PM</fullName>
                </value>
                <value>
                    <fullName>Eze Castle</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Liquidity Book</fullName>
                </value>
                <value>
                    <fullName>Murex</fullName>
                </value>
                <value>
                    <fullName>NeoXam NxManager</fullName>
                </value>
                <value>
                    <fullName>Orchestrade</fullName>
                </value>
                <value>
                    <fullName>Sophis</fullName>
                </value>
                <value>
                    <fullName>Thinkfolio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKIDAdditionalAccountFields__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>AAF{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID AdditionalAccountFields</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PaidMaintenance__c</fullName>
        <description>SFDC-1957
Used to track on associated cases whether there is an alert.</description>
        <inlineHelpText>This is required to flow down to cases so support agents know if maintenance is paid for.</inlineHelpText>
        <label>Paid Maintenance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Not Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <description>SFDC-5483 : help to recognize the partner on the Account.</description>
        <inlineHelpText>Please select the appropriate partner name.</inlineHelpText>
        <label>Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BNY Basic</fullName>
                </value>
                <value>
                    <fullName>BNY Premium</fullName>
                </value>
                <value>
                    <fullName>CBS Direct</fullName>
                </value>
                <value>
                    <fullName>CITI Tier 1</fullName>
                </value>
                <value>
                    <fullName>CITI Tier 2</fullName>
                </value>
                <value>
                    <fullName>JPMC</fullName>
                </value>
                <value>
                    <fullName>NRI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PendingDeliveryDate__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Date MSF started receiving the Pending trades data from the customer</inlineHelpText>
        <label>Pending Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PendingStatus__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Status of MSF Data Onboarding Process of the Pending Trades data from this customer (if applicable)</inlineHelpText>
        <label>Pending Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed in Principle</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Delivered via Pirum</fullName>
                </value>
                <value>
                    <fullName>Interested in contributing via Pirum</fullName>
                </value>
                <value>
                    <fullName>Not Contacted</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Onboarded</fullName>
                </value>
                <value>
                    <fullName>Partially Onboarded</fullName>
                </value>
                <value>
                    <fullName>Work in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PerformanceSystem__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <label>Performance System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barclays POINT</fullName>
                </value>
                <value>
                    <fullName>BI-SAM</fullName>
                </value>
                <value>
                    <fullName>DST Performance System</fullName>
                </value>
                <value>
                    <fullName>Eagle PACE</fullName>
                </value>
                <value>
                    <fullName>Eagle Performance</fullName>
                </value>
                <value>
                    <fullName>Factset</fullName>
                </value>
                <value>
                    <fullName>Internally Developed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Ortec Pearl</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Security APL</fullName>
                </value>
                <value>
                    <fullName>SimCorp</fullName>
                </value>
                <value>
                    <fullName>Statpro</fullName>
                </value>
                <value>
                    <fullName>Statpro (through Citi GTS)</fullName>
                </value>
                <value>
                    <fullName>Sungard</fullName>
                </value>
                <value>
                    <fullName>Sylvan</fullName>
                </value>
                <value>
                    <fullName>Sylvan (from SS&amp;C)</fullName>
                </value>
                <value>
                    <fullName>UBS Delta</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Vermillion</fullName>
                </value>
                <value>
                    <fullName>Vestmark</fullName>
                </value>
                <value>
                    <fullName>Wallstreet Suite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PetraExpirationDate__c</fullName>
        <description>SFDC-213 Updated page layout location
Original SFDC1-4484 Created for Service Communicty to mass-activate and deactive users.</description>
        <inlineHelpText>Maintained by Petra Customer Care</inlineHelpText>
        <label>Petra Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PortfolioMonitoring__c</fullName>
        <description>SFDC-2751 - Additional Account Fields needed for PCM</description>
        <inlineHelpText>This field stores the list of iLEVEL product competitors</inlineHelpText>
        <label>Portfolio Monitoring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Addepar</fullName>
                </value>
                <value>
                    <fullName>BlackMountain</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Dynamo</fullName>
                </value>
                <value>
                    <fullName>eFront</fullName>
                </value>
                <value>
                    <fullName>eVenture</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>FIS</fullName>
                </value>
                <value>
                    <fullName>Homegrown</fullName>
                </value>
                <value>
                    <fullName>iLEVEL</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Preqin</fullName>
                </value>
                <value>
                    <fullName>QVal</fullName>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimeBrokers__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <inlineHelpText>Who the prime broker is for this customer (only applicable to buyside MSF Customers)</inlineHelpText>
        <label>Prime Brokers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABN Amro</fullName>
                </value>
                <value>
                    <fullName>Barclays</fullName>
                </value>
                <value>
                    <fullName>BMO Nesbitt</fullName>
                </value>
                <value>
                    <fullName>BNP</fullName>
                </value>
                <value>
                    <fullName>BoA ML</fullName>
                </value>
                <value>
                    <fullName>BoNY</fullName>
                </value>
                <value>
                    <fullName>Cantor Fitzgerald</fullName>
                </value>
                <value>
                    <fullName>CDC IXIS Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Citigroup</fullName>
                </value>
                <value>
                    <fullName>Credit Suisse</fullName>
                </value>
                <value>
                    <fullName>Daiwa</fullName>
                </value>
                <value>
                    <fullName>Deutsche Bank</fullName>
                </value>
                <value>
                    <fullName>Fidelity</fullName>
                </value>
                <value>
                    <fullName>Fortis</fullName>
                </value>
                <value>
                    <fullName>Goldman Sachs</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
                <value>
                    <fullName>ING</fullName>
                </value>
                <value>
                    <fullName>Jefferies</fullName>
                </value>
                <value>
                    <fullName>JP Morgan</fullName>
                </value>
                <value>
                    <fullName>Knight</fullName>
                </value>
                <value>
                    <fullName>Macquarie</fullName>
                </value>
                <value>
                    <fullName>Morgan Stanley</fullName>
                </value>
                <value>
                    <fullName>NewEdge</fullName>
                </value>
                <value>
                    <fullName>Nomura</fullName>
                </value>
                <value>
                    <fullName>Raymond James</fullName>
                </value>
                <value>
                    <fullName>RBC Dexia</fullName>
                </value>
                <value>
                    <fullName>Scotia Capital</fullName>
                </value>
                <value>
                    <fullName>SIG</fullName>
                </value>
                <value>
                    <fullName>Smith Barney</fullName>
                </value>
                <value>
                    <fullName>Societé General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReconciliationSystem__c</fullName>
        <description>SFDC1-785 - Addition Account Fields - General Info</description>
        <label>Reconciliation System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CheckFree</fullName>
                </value>
                <value>
                    <fullName>Chesapeake T-Recs</fullName>
                </value>
                <value>
                    <fullName>Electra Stars</fullName>
                </value>
                <value>
                    <fullName>Fiserv Frontier</fullName>
                </value>
                <value>
                    <fullName>Fiserv NXG</fullName>
                </value>
                <value>
                    <fullName>Fiserv Recon+</fullName>
                </value>
                <value>
                    <fullName>Hydrobatch</fullName>
                </value>
                <value>
                    <fullName>Indus Valley Partners (I.V.P.)</fullName>
                </value>
                <value>
                    <fullName>Internally Developed</fullName>
                </value>
                <value>
                    <fullName>M.I.K</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Omgeo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
                <value>
                    <fullName>Smartstream TLM</fullName>
                </value>
                <value>
                    <fullName>SS&amp;C Recon/Evare</fullName>
                </value>
                <value>
                    <fullName>Sungard IntelliMatch</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Vertas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAFSAR__c</fullName>
        <description>SFDC1-2071 Meg Francis and Suneet Raniga are business owners</description>
        <inlineHelpText>Flag if the MSF buyside Customer is &quot;allowed&quot; to see SAF/SAR (Buyside Premium Fee fields) in the products to which they have subscribed.</inlineHelpText>
        <label>SAF/SAR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceSystems__c</fullName>
        <description>SFDC-4333 - Adding new Fields for AAF for GRRS</description>
        <label>Source Systems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broadridge</fullName>
                </value>
                <value>
                    <fullName>Calypso</fullName>
                </value>
                <value>
                    <fullName>EDM</fullName>
                </value>
                <value>
                    <fullName>EZE</fullName>
                </value>
                <value>
                    <fullName>FIS</fullName>
                </value>
                <value>
                    <fullName>MT4</fullName>
                </value>
                <value>
                    <fullName>MT5</fullName>
                </value>
                <value>
                    <fullName>Murex</fullName>
                </value>
                <value>
                    <fullName>OneZero</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pirum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Systems__c</fullName>
        <description>SFDC-3923: Captures the details about systems the clients are using so that cappitech can provide their solution accordingly.</description>
        <inlineHelpText>Details about systems the clients are using</inlineHelpText>
        <label>Systems</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRARM__c</fullName>
        <description>SFDC-4333 - Adding new Fields for AAF for GRRS</description>
        <label>TR/ARM</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>DTCC</fullName>
                </value>
                <value>
                    <fullName>HKTR</fullName>
                </value>
                <value>
                    <fullName>REGIS</fullName>
                </value>
                <value>
                    <fullName>TRAX</fullName>
                </value>
                <value>
                    <fullName>UV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TorontoStockExchangeTier__c</fullName>
        <description>SFDC-3053 Out of the IPREO (Core) migration it came forward they require to log the Toronto Stock Exchange Tier program tier on the accounts.</description>
        <inlineHelpText>Indicates the Toronto Stock Exchange Tier related to the Account</inlineHelpText>
        <label>Toronto Stock Exchange Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Venture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TradeEQMAnalyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1069 This is a picklist field in Markit SFDC-CRM, but in the new system we convert this to a Lookup to User record so metadata change is not required when there is a change in staff.</description>
        <inlineHelpText>Lookup reference of which analyst is working on onboarding this customer and looking after the account from a Trade EQM perspective</inlineHelpText>
        <label>Trade EQM Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountTradeEQMAnalyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TradeEQMCurrentOnboardingStatus__c</fullName>
        <description>SFDC1-1069 Additional Account fields - Trade EQM Current Onboarding Status</description>
        <inlineHelpText>Weekly status on customer onboarding for  Trade EQM</inlineHelpText>
        <label>Trade EQM Current Onboarding Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TradeEQMCustomerTraining__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-1069 Additional Account Fields - Support Trade EQM Customer Training</description>
        <inlineHelpText>Tick the checkbox if Trade EQM Training is complete</inlineHelpText>
        <label>Trade EQM Customer Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TradeEQMDataIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-1069 - Additional Account Fields - Trade EQM Data Integration</description>
        <inlineHelpText>Tick the checkbox if Trade EQM Data Integration is complete</inlineHelpText>
        <label>Trade EQM Data Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TradeEQMPlatformCustomized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-1069 Additional Account Fields - Support Trade EQM Platform Customized</description>
        <inlineHelpText>Tick the checkbox if Trade EQM Platform Customization is complete</inlineHelpText>
        <label>Trade EQM Platform Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSOSoftwareRegion__c</fullName>
        <description>SFDC1-1067 Additional Account Fields - WSO Software Region</description>
        <inlineHelpText>Region of the WSO Software</inlineHelpText>
        <label>WSO Software Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WSOSoftwareRelationshipStatus__c</fullName>
        <description>SFDC1-1067 Additional Account Fields - WSO Software Relationship Status</description>
        <inlineHelpText>Risk status from a WSO perspective of this account for IHS Markit</inlineHelpText>
        <label>WSO Software Relationship Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Additional Account Fields</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Additional Account Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Account Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AdditionalAccountFieldsName</fullName>
        <active>true</active>
        <description>SFDC1-4805 User should not be able to edit this field</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.AdditionalAccountFields__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
ISCHANGED(Name)
&amp;&amp; NOT CONTAINS($Profile.Name, &apos;Data Governance&apos;)
&amp;&amp; NOT CONTAINS($Profile.Name, &apos;System Admin&apos;)
&amp;&amp; NOT($Permission.AccountGovernance)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Additional Account Fields Name is not editable</errorMessage>
    </validationRules>
</CustomObject>